--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -117,13 +117,15 @@
                 map:fontFamily="sans-serif" />
         </LinearLayout>
 
+
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="　　　　　"
-            android:textSize="10sp" />
-
+            android:text="　　　　　　　"
+            android:textColor="#B909C5"
+            android:textSize="10sp"
+            map:fontFamily="sans-serif" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -133,24 +135,26 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="　　　　            　　       　　　　　　　　　　　"
+            android:text="　　　　　　　　　　　　"
             android:textColor="#B909C5"
-            android:textSize="15sp"
+            android:textSize="20sp"
             map:fontFamily="sans-serif" />
 
             <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="29dp"
-                android:layout_height="27dp"
-                map:srcCompat="@drawable/coin" />
+                android:id="@+id/imageView6"
+                android:layout_width="60dp"
+                android:layout_height="40dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/coin" />
+
 
             <TextView
                 android:id="@+id/textView5"
-                android:layout_width="43dp"
+                android:layout_width="23dp"
                 android:layout_height="wrap_content"
                 android:text=""
                 android:textColor="#F1E1E1"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 map:fontFamily="sans-serif" />
     </LinearLayout>
 
