--- a/app/src/main/res/layout/activity_collection.xml
+++ b/app/src/main/res/layout/activity_collection.xml
@@ -22,7 +22,7 @@
         <LinearLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="72dp"
             android:orientation="horizontal">
 
             <TextView
@@ -37,7 +37,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="175dp"
             android:orientation="horizontal">
 
             <ImageView
@@ -51,10 +51,10 @@
             <ImageView
                 android:id="@+id/imageView2"
                 android:layout_width="25dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@drawable/frame2" />
+                app:srcCompat="@drawable/f2132" />
 
             <ImageView
                 android:id="@+id/imageView3"
@@ -70,95 +70,95 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img01" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="175dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img01" />
 
             <ImageView
                 android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img02" />
 
             <ImageView
                 android:id="@+id/imageView7"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img03" />
 
             <ImageView
                 android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img04" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="175dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img05" />
 
             <ImageView
                 android:id="@+id/imageView10"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img06" />
 
             <ImageView
                 android:id="@+id/imageView11"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img07" />
 
             <ImageView
                 android:id="@+id/imageView12"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img08" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="175dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView13"
-                android:layout_width="1dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -166,7 +166,7 @@
 
             <ImageView
                 android:id="@+id/imageView14"
-                android:layout_width="4dp"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
@@ -174,57 +174,57 @@
 
             <ImageView
                 android:id="@+id/imageView15"
-                android:layout_width="2dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@drawable/img10" />
+                app:srcCompat="@drawable/img09" />
 
             <ImageView
                 android:id="@+id/imageView16"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img10" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="175dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView17"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img11" />
 
             <ImageView
                 android:id="@+id/imageView18"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img12" />
 
             <ImageView
                 android:id="@+id/imageView19"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img01" />
 
             <ImageView
                 android:id="@+id/imageView20"
-                android:layout_width="wrap_content"
+                android:layout_width="25dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:contentDescription="@string/todo"
-                app:srcCompat="@android:color/transparent" />
+                app:srcCompat="@drawable/img02" />
         </LinearLayout>
     </LinearLayout>
 
