--- a/app/src/main/res/layout/activity_gacha.xml
+++ b/app/src/main/res/layout/activity_gacha.xml
@@ -10,14 +10,14 @@
         android:id="@+id/imageView3"
         android:layout_width="410dp"
         android:layout_height="736dp"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@color/colorAccent"
-        tools:layout_editor_absoluteX="0dp"
-        android:contentDescription="TODO"
-        tools:layout_editor_absoluteY="-3dp" />
+        app:layout_constraintVertical_bias="0.8"
+        app:srcCompat="@color/colorAccent" />
 
     <ImageView
         android:id="@+id/imageView"
