--- a/app/src/main/res/layout/activity_camera2.xml
+++ b/app/src/main/res/layout/activity_camera2.xml
@@ -20,9 +20,8 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.363" />
-
-    <ImageView2
-        android:id="@+id/image2_view"
+    <Bitmap1
+        android:id="@+id/bitmap1_view"
         android:layout_width="402dp"
         android:layout_height="732dp"
         android:layout_marginEnd="4dp"
@@ -35,5 +34,4 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
